clap_derive/tests/ui/parse_not_zero_args.stderr
error: parse must have exactly one argument
  --> $DIR/parse_not_zero_args.rs:14:12
   |
14 |     #[clap(parse(from_str, from_str))]
   |            ^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/parse_not_zero_args.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
